# axs-6

./: .gitignore  FORMAT_SPEC.md  LICENSE  README.md  pyproject.toml  requirements.txt
axs/: __init__.py  core.py  quantize.py  utils.py
axs/nn/: __init__.py  functional.py  modules.py  optim.py
axs/triton_kernels/: __init__.py  matmul_kernel.py  quantize_kernel.py
axs/unified/: __init__.py  backend.py  distributed.py  functional_unified.py  mixed_precision.py  modules_unified.py  quantize_unified.py  training_unified.py  triton_kernels.py
axs/v2/: __init__.py  annealing.py  functional_v2.py  hadamard.py  modules_v2.py  quantize_v2.py  smooth_quant.py  training.py
benchmarks/: benchmark_axs6_vs_fp8_fp4.py  benchmark_backend.py  benchmark_free_speed.py  benchmark_fused_linear.py  benchmark_memory.py  benchmark_mixed_precision.py  benchmark_precision.py  benchmark_speed.py  benchmark_triton.py  benchmark_unified.py  benchmark_v1_vs_v2.py  benchmark_vs_fp8.py
examples/: pretrain_gpt.py  train_mnist.py  train_transformer.py
tests/: test_backend.py  test_core.py  test_mixed_precision.py  test_nn.py  test_quantize.py  test_training.py  test_triton_fused_linear.py  test_triton_kernels.py  test_unified.py  test_v2.py
